data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3039.wast
;; 8. **Test: Maximum Boundary Check for `br_table` Index with Return**    - **Description**: Set a `br_table` with index values up to the maximum boundary limit, followed by a `return`. This tests the boundary conditions for index handling before return.    - **Constraint**: Validating if higher boundary index handling is correct prior to executing a return.

(assert_invalid
  (module
    (func 
      (block $outer 
        (block $inner
          (call 1)
          (br_table 0 1 (i32.const 0))
          (return)
        )
      )
      (i32.const 0)
    )
    (func (param i32))
  )
  "type mismatch"
)